--- a/server.properties
+++ b/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Mon May 17 12:50:43 UTC 2021
+#Tue May 18 04:26:44 UTC 2021
 enable-jmx-monitoring=false
 rcon.port=25575
 level-seed=
@@ -15,8 +15,8 @@ generate-structures=true
 difficulty=hard
 network-compression-threshold=256
 max-tick-time=60000
-max-players=20
 use-native-transport=true
+max-players=20
 online-mode=false
 enable-status=true
 allow-flight=false
@@ -36,6 +36,7 @@ rcon.password=
 player-idle-timeout=0
 force-gamemode=false
 rate-limit=0
+debug=false
 hardcore=false
 white-list=false
 broadcast-console-to-ops=true
