--- a/server.properties
+++ b/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Sat May 22 12:57:40 UTC 2021
+#Sun May 23 10:55:04 UTC 2021
 enable-jmx-monitoring=false
 rcon.port=25575
 level-seed=
@@ -15,8 +15,8 @@ generate-structures=true
 difficulty=hard
 network-compression-threshold=256
 max-tick-time=60000
-use-native-transport=true
 max-players=20
+use-native-transport=true
 online-mode=false
 enable-status=true
 allow-flight=false
@@ -30,7 +30,7 @@ enable-rcon=false
 sync-chunk-writes=true
 op-permission-level=4
 prevent-proxy-connections=false
-resource-pack=
+resource-pack=https\://www.dropbox.com/s/ion1o5jnaj6cxbg/ClearGlassPack1.16.2.zip?dl\=1
 entity-broadcast-range-percentage=100
 rcon.password=
 player-idle-timeout=0
