--- a/spigot.yml
+++ b/spigot.yml
@@ -92,7 +92,7 @@ world-settings:
     hanging-tick-frequency: 100
     arrow-despawn-rate: 1200
     trident-despawn-rate: 1200
-    nerf-spawner-mobs: false
+    nerf-spawner-mobs: true
     end-portal-sound-radius: 0
     entity-tracking-range:
       players: 48
@@ -101,8 +101,8 @@ world-settings:
       misc: 32
       other: 64
     merge-radius:
-      item: 2.5
-      exp: 3.0
+      item: 4.0
+      exp: 6.0
     growth:
       cactus-modifier: 100
       cane-modifier: 100
@@ -127,11 +127,11 @@ world-settings:
       villagers-work-immunity-after: 100
       villagers-work-immunity-for: 20
       villagers-active-for-panic: true
-      animals: 32
-      monsters: 32
+      animals: 16
+      monsters: 24
       raiders: 48
-      misc: 16
-      tick-inactive-villagers: true
+      misc: 8
+      tick-inactive-villagers: false
       wake-up-inactive:
         animals-max-per-tick: 4
         animals-every: 1200
