--- a/paper.yml
+++ b/paper.yml
@@ -85,7 +85,7 @@ world-settings:
     baby-zombie-movement-modifier: 0.5
     prevent-moving-into-unloaded-chunks: true
     use-vanilla-world-scoreboard-name-coloring: false
-    max-auto-save-chunks-per-tick: 12
+    max-auto-save-chunks-per-tick: 8
     delay-chunk-unloads-by: 10s
     count-all-mobs-for-spawning: false
     iron-golems-can-spawn-in-air: false
@@ -112,19 +112,19 @@ world-settings:
     keep-spawn-loaded: true
     prevent-tnt-from-moving-in-water: false
     max-leash-distance: 10.0
-    mob-spawner-tick-rate: 1
+    mob-spawner-tick-rate: 2
     enable-treasure-maps: true
     treasure-maps-return-already-discovered: false
     light-queue-size: 20
     auto-save-interval: -1
-    non-player-arrow-despawn-rate: -1
+    non-player-arrow-despawn-rate: 60
     creative-arrow-despawn-rate: -1
     spawner-nerfed-mobs-should-jump: false
     entities-target-with-follow-range: false
     zombie-villager-infection-chance: -1.0
     zombies-target-turtle-eggs: true
     all-chunks-are-slime-chunks: false
-    optimize-explosions: false
+    optimize-explosions: true
     remove-corrupt-tile-entities: false
     per-player-mob-spawns: false
     fixed-chunk-inhabited-time: -1
@@ -132,7 +132,7 @@ world-settings:
     falling-block-height-nerf: 0
     tnt-entity-height-nerf: 0
     should-remove-dragon: false
-    max-entity-collisions: 4
+    max-entity-collisions: 2
     phantoms-do-not-spawn-on-creative-players: true
     phantoms-only-attack-insomniacs: true
     fix-wither-targeting-bug: false
@@ -174,7 +174,7 @@ world-settings:
     viewdistances:
       no-tick-view-distance: -1
     anti-xray:
-      enabled: false
+      enabled: true
       engine-mode: 1
       max-chunk-section-index: 3
       update-radius: 2
