--- a/paper.yml
+++ b/paper.yml
@@ -14,6 +14,7 @@ verbose: false
 use-display-name-in-quit-message: false
 config-version: 20
 settings:
+  log-named-entity-deaths: true
   use-alternative-luck-formula: false
   fix-entity-position-desync: true
   player-auto-save-rate: -1
@@ -61,6 +62,16 @@ settings:
     enabled: false
     online-mode: false
     secret: ''
+  loggers:
+    deobfuscate-stacktraces: true
+  item-validation:
+    display-name: 8192
+    loc-name: 8192
+    lore-line: 8192
+    book:
+      title: 8192
+      author: 8192
+      page: 16384
 timings:
   enabled: true
   verbose: true
@@ -82,6 +93,10 @@ messages:
     authentication-servers-down: ''
 world-settings:
   default:
+    map-item-frame-cursor-limit: 128
+    seed-based-feature-search-loads-chunks: true
+    fix-items-merging-through-walls: false
+    show-sign-click-command-failure-msgs-to-player: false
     baby-zombie-movement-modifier: 0.5
     prevent-moving-into-unloaded-chunks: true
     use-vanilla-world-scoreboard-name-coloring: false
@@ -174,6 +189,7 @@ world-settings:
     viewdistances:
       no-tick-view-distance: -1
     anti-xray:
+      max-block-height: 64
       enabled: true
       engine-mode: 1
       max-chunk-section-index: 3
@@ -250,3 +266,17 @@ world-settings:
       - HARD
     generator-settings:
       flat-bedrock: false
+    mob-effects:
+      undead-immune-to-certain-effects: true
+      spiders-immune-to-poison-effect: true
+      immune-to-wither-effect:
+        wither: true
+        wither-skeleton: true
+    spawn-limits:
+      monsters: -1
+      animals: -1
+      water-animals: -1
+      water-ambient: -1
+      ambient: -1
+    unsupported-settings:
+      fix-invulnerable-end-crystal-exploit: true
