--- a/server.properties
+++ b/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Wed May 26 14:53:58 UTC 2021
+#Sat Jul 17 13:45:25 UTC 2021
 enable-jmx-monitoring=false
 rcon.port=25575
 level-seed=
@@ -15,8 +15,9 @@ generate-structures=true
 difficulty=hard
 network-compression-threshold=256
 max-tick-time=60000
-use-native-transport=true
+require-resource-pack=false
 max-players=20
+use-native-transport=true
 online-mode=false
 enable-status=true
 allow-flight=false
@@ -24,6 +25,7 @@ broadcast-rcon-to-ops=true
 view-distance=8
 max-build-height=256
 server-ip=
+resource-pack-prompt=
 allow-nether=true
 server-port=25565
 enable-rcon=false
