--- a/server.properties
+++ b/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Sat Jul 17 13:45:25 UTC 2021
+#Sat Jul 24 16:56:42 ICT 2021
 enable-jmx-monitoring=false
 rcon.port=25575
 level-seed=
